# linwarden

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rule_request.yml
.github/workflows/: ci.yml  pypi-smoke.yml  release.yml
docs/: architecture.md  comparison.md  configuration.md  contributor-ideas.md  development.md  fixture-roots.md  github-actions.md  launch.md  package-vulnerability-feed.md  positioning.md  release.md  report-schema.md  roadmap.md  rules.md  ssh.md
examples/: README.md  fixture-report.json  fixture-report.md  fixture-report.sarif  linwarden.json
schemas/: report.schema.json
scripts/: changelog_release_notes.py  release_assets.py  smoke_pypi_release.py  verify_release_version.py
src/linwarden/: cli.py  collectors.py  config.py  models.py  parsers.py  reporters.py  rules.py
tests/: test_action_metadata.py  test_collectors.py  test_config.py  test_distro_fixtures.py  test_parsers.py  test_release_assets.py  test_reporters_cli.py  test_rules.py
tests/fixtures/: grype-vulnerability-report.json  invalid-vulnerability-feed.json  linwarden.json  osv-vulnerability-report.json  trivy-vulnerability-report.json  vulnerability-feed.json
tests/fixtures/alpine-root/etc/: hostname  nftables.conf  os-release
tests/fixtures/alpine-root/etc/ssh/: sshd_config
tests/fixtures/alpine-root/proc/: loadavg  meminfo  uptime
tests/fixtures/alpine-root/proc/sys/kernel/: osrelease
tests/fixtures/arch-root/etc/: hostname  nftables.conf  os-release
tests/fixtures/arch-root/etc/ssh/: sshd_config
tests/fixtures/arch-root/etc/systemd/system/multi-user.target.wants/: nftables.service
tests/fixtures/arch-root/proc/: loadavg  meminfo  uptime
tests/fixtures/arch-root/proc/sys/kernel/: osrelease
tests/fixtures/config/: invalid-profile.json  missing-reason.json
tests/fixtures/debian-root/etc/: hostname  os-release
tests/fixtures/debian-root/etc/ssh/: sshd_config
tests/fixtures/debian-root/etc/ufw/: ufw.conf
tests/fixtures/debian-root/proc/: loadavg  meminfo  uptime
tests/fixtures/debian-root/proc/sys/kernel/: osrelease
tests/fixtures/debian-root/var/lib/update-notifier/: updates-available
tests/fixtures/fedora-root/etc/: hostname  os-release
tests/fixtures/fedora-root/etc/firewalld/: firewalld.conf
tests/fixtures/fedora-root/etc/ssh/: sshd_config
tests/fixtures/fedora-root/proc/: loadavg  meminfo  mounts  uptime
tests/fixtures/fedora-root/proc/sys/kernel/: osrelease
tests/fixtures/linux-root/etc/: hostname  passwd
tests/fixtures/linux-root/etc/ssh/: sshd_config
tests/fixtures/linux-root/etc/ssh/sshd_config.d/: hardening.conf
tests/fixtures/linux-root/etc/ufw/: ufw.conf
tests/fixtures/linux-root/proc/: loadavg  meminfo  mounts  uptime
tests/fixtures/linux-root/proc/sys/kernel/: osrelease
tests/fixtures/linux-root/var/lib/update-notifier/: updates-available
(+7 files in other folders)
