[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linwarden"
version = "0.13.1"
description = "Rootless Linux host inventory and hardening audit CLI."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Linwarden contributors" }
]
keywords = [
  "linux",
  "security",
  "hardening",
  "inventory",
  "audit",
  "cli",
  "sysadmin"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Monitoring"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.13,<2",
  "ruff>=0.8"
]

[project.urls]
Homepage = "https://github.com/kingkyylian/linwarden"
Documentation = "https://github.com/kingkyylian/linwarden/tree/main/docs"
Issues = "https://github.com/kingkyylian/linwarden/issues"

[project.scripts]
linwarden = "linwarden.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["linwarden"]

[tool.mypy]
python_version = "3.9"
files = ["src/linwarden", "scripts"]
mypy_path = "src"
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
